Update UI/UX, integrated cloud database operations